syntax = "proto3";

package auth;

service AuthService {
  rpc VerifyJWT (VerifyJWTRequest) returns (VerifyJWTResponse);
}

message VerifyJWTRequest {
  string token = 1;
}

message VerifyJWTResponse {
  bool valid = 1;
  string user_id = 2;
  string message = 3;
}
